# semantic-schools

./: .gitignore  README.md
analysis/: README.md
analysis/haskovo/: nvo4_compare.rq
analysis/python/: matura_performance_stem.py
analysis/region_compare/: README.md
analysis/sparql/: dzi-comapre.rq  matura-stem.rq  vtora-matura.rq
csv_importer/: .gitignore  README.md  alembic.ini  app.py  csv_max_lengths.py  download_csv.py  import_csv.py  models.py  new_sources.csv  pyproject.toml  refine_csv.py  requirements.txt  sources.csv
csv_importer/csv_importer/: db.py  db_actions.py  db_manage.py  db_models.py  import_csv.py  import_mon_csv.py  models.py  refine_csv.py  runtime.py  tickets-to-file.md  wikidata.py
csv_importer/dag/: README.md  dag_csv_importer.py
csv_importer/postgres/: crunch_setup.md  data_cleanup_working.sql  (+2 more)
dags/: dag_csv_importer.py  dag_csv_importer_requirements.txt
dashboards/dzi-streamlit/dashboard/: .gitignore  README.md  chartlib.py  dashboard.py  datalib.py  pyproject.toml  requirements.txt
dashboards/dzi-streamlit/dashboard/.streamlit/: config.toml
dashboards/dzi-streamlit/dashboard/lib/: chart.py  data.py
dashboards/dzi-streamlit/dashboard/pages/: dzi_data.py  dzi_data_updated.py  nvo_data.py
data/: README.md
datasets/: README.md
model/: README.md  high-level.ttl  nkpd.ttl  observation.ttl  ontology.ttl  prefixes.ttl  school-geo.ttl
playground/: README.md
repo/: README.md  create-repo.sh  import-file.sh  init-repo.sh  repo-config.ttl  vars.sh
vocab/: .gitignore  README.md  ontology.ttl  run.sh  semantic-schools.ttl
(+123 files in other folders)
