[project]
name = "dzi-data-dashboard"
version = "0.1.0"
description = "A Streamlit app representing DZI data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair==5.5.0",
    "geopandas>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=17.0.0",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
]
